support for tas-for-k8s

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,12 @@ spring.cloud.stream.bindings.output.destination=completedtasks
 management.endpoints.web.exposure.include=*
 
 
+spring.datasource.url: ${vcap.services.mysql.credentials.jdbcUrl:jdbc:h2:mem:testdb}
+spring.datasource.username: ${vcap.services.mysql.credentials.username:sa}
+spring.datasource.password: ${vcap.services.mysql.credentials.password:}
+spring.datasource.testOnBorrow: true
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+
