--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,33 @@ spring.jpa.generate-ddl=true
 spring.cloud.stream.bindings.output.destination=completedtasks
 management.endpoints.web.exposure.include=*
 
+spring.datasource.url: ${vcap.services.mariadb.credentials.jdbcUrl}&queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName=tac_db
 
-spring.datasource.url: ${vcap.services.mysql.credentials.jdbcUrl:jdbc:h2:mem:testdb}
-spring.datasource.username: ${vcap.services.mysql.credentials.username:sa}
-spring.datasource.password: ${vcap.services.mysql.credentials.password:}
+spring.datasource.username: ${vcap.services.mariadb.credentials.username}
+spring.datasource.password: ${vcap.services.mariadb.credentials.password}
 spring.datasource.testOnBorrow: true
+spring.datasource.max-active=10
+spring.datasource.max-idle=8
+spring.datasource.min-idle=8
+spring.datasource.initial-size=5
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.format_sql=true
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=none
 
+spring.sleuth.sampler.probability: 1.0
+
+management.metrics.export.wavefront.uri=${WAVEFRONT_PROXY_URL}
+# management.metrics.export.wavefront.uri=https://surf.wavefront.com/api
+management.metrics.export.wavefront.step=10
+wavefront.application.name=todo-application-demo
+wavefront.application.service=todo-service
+wavefront.freemium-account=false
+
+# logging.level.com.zaxxer.hikari: DEBUG
+# logging.level.brave.mysql8: DEBUG
+# logging.level.org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+# logging.level.org.springframework.jdbc.core.JdbcTemplate: DEBUG
+# logging.level.org.springframework.jdbc.core.StatementCreatorUtils: TRACE
