--- a/manifest.yml
+++ b/manifest.yml
@@ -3,4 +3,9 @@ applications:
   - name: todo-service
     memory: 1G
     services:
-    - mysql
+    - mariadb
+    routes:
+    - route: todo.apps.tas.tanzuworld.com/api
+    path: target/app.jar
+    env:
+      WAVEFRONT_PROXY_URL: ${wavefront_endpoint}
