--- a/manifest-pcfone.yml
+++ b/manifest-pcfone.yml
@@ -5,3 +5,4 @@ applications:
     path: target/app.jar
     env:
       JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ }}'
+      WAVEFRONT_PROXY_URL: https://surf.wavefront.com/api
