--- a/manifest-pcfone.yml
+++ b/manifest-pcfone.yml
@@ -3,6 +3,8 @@ applications:
   - name: todo-service
     memory: 1G
     path: target/app.jar
+    services:
+     - mysql
     env:
       JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ }}'
       WAVEFRONT_PROXY_URL: https://surf.wavefront.com/api
