--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -16,8 +16,8 @@ spring.jpa.hibernate.ddl-auto=create
 
 #spring.sleuth.sampler.probability: 1.0
 
-management.metrics.export.wavefront.uri=proxy://localhost:2878
+#management.metrics.export.wavefront.uri=proxy://localhost:2878
 wavefront.application.name=todo-application-demo
 wavefront.application.service=todo-service
-wavefront.freemium-account=false
+wavefront.freemium-account=true
 
