--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -4,8 +4,9 @@ spring.cloud.stream.bindings.output.destination=completedtasks
 management.endpoints.web.exposure.include=*
 server.port=80
 
-spring.datasource.url: jdbc:mysql://localhost:3306/my_database?user=root&password=unix11&useSSL=false
-#&queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName=tac_db
+spring.datasource.url: jdbc:mysql://localhost:3306/my_database?user=root&password=unix11&useSSL=false&queryInterceptors=brave.mysql8.TracingQueryInterceptor
+# spring.datasource.url: jdbc:mysql://localhost:3306/my_database?user=root&password=unix11&useSSL=false&queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName=tac_db
+
 spring.datasource.username: root
 spring.datasource.password: unix11
 spring.datasource.testOnBorrow: true
@@ -16,8 +17,7 @@ spring.jpa.hibernate.ddl-auto=create
 
 #spring.sleuth.sampler.probability: 1.0
 
-management.metrics.export.wavefront.uri=proxy://localhost:2878
+# management.metrics.export.wavefront.uri=proxy://localhost:2878
 wavefront.application.name=todo-application-demo
 wavefront.application.service=todo-service
-wavefront.freemium-account=false
-
+wavefront.freemium-account=true
