--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.jpa.generate-ddl=true
 spring.cloud.stream.bindings.output.destination=completedtasks
 management.endpoints.web.exposure.include=*
 
-spring.datasource.url: ${vcap.services.mariadb.credentials.jdbcUrl}&queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName=tac_db
+spring.datasource.url: ${vcap.services.mariadb.credentials.jdbcUrl}
+#&queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName=tac_db
 
 spring.datasource.username: ${vcap.services.mariadb.credentials.username}
 spring.datasource.password: ${vcap.services.mariadb.credentials.password}
@@ -21,7 +22,7 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.sleuth.sampler.probability: 1.0
 
-management.metrics.export.wavefront.uri=${WAVEFRONT_PROXY_URL}
+# management.metrics.export.wavefront.uri=${WAVEFRONT_PROXY_URL}
 # management.metrics.export.wavefront.uri=https://surf.wavefront.com/api
 management.metrics.export.wavefront.step=10
 wavefront.application.name=todo-application-demo
