--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -4,7 +4,7 @@ spring.cloud.stream.bindings.output.destination=completedtasks
 management.endpoints.web.exposure.include=*
 server.port=80
 
-spring.datasource.url: jdbc:mysql://localhost:3306/my_database?user=root&password=unix11&useSSL=false&queryInterceptors=brave.mysql8.TracingQueryInterceptor
+spring.datasource.url: jdbc:mysql://localhost:3306/my_database?user=root&password=unix11&useSSL=false
 # spring.datasource.url: jdbc:mysql://localhost:3306/my_database?user=root&password=unix11&useSSL=false&queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName=tac_db
 
 spring.datasource.username: root
