--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -2,10 +2,10 @@ server.servlet.context-path=/api
 spring.jpa.generate-ddl=true
 spring.cloud.stream.bindings.output.destination=completedtasks
 management.endpoints.web.exposure.include=*
-server.port=80
+server.port=8080
 
-spring.datasource.url: jdbc:mysql://localhost:3306/my_database?user=root&password=unix11&useSSL=false&queryInterceptors=brave.mysql8.TracingQueryInterceptor
-# spring.datasource.url: jdbc:mysql://localhost:3306/my_database?user=root&password=unix11&useSSL=false&queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName=tac_db
+# spring.datasource.url: jdbc:mysql://localhost:3306/my_database?user=root&password=unix11&useSSL=false
+spring.datasource.url: jdbc:mysql://localhost:3306/my_database?user=root&password=unix11&useSSL=false&queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName=tac_db
 
 spring.datasource.username: root
 spring.datasource.password: unix11
@@ -13,11 +13,11 @@ spring.datasource.testOnBorrow: true
 
 spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 #spring.sleuth.sampler.probability: 1.0
 
-#management.metrics.export.wavefront.uri=proxy://localhost:2878
+management.metrics.export.wavefront.uri=proxy://localhost:2878
 wavefront.application.name=todo-application-demo
 wavefront.application.service=todo-service
-wavefront.freemium-account=true
+wavefront.freemium-account=false
