--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,8 +22,7 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.sleuth.sampler.probability: 1.0
 
-# management.metrics.export.wavefront.uri=${WAVEFRONT_PROXY_URL}
-# management.metrics.export.wavefront.uri=https://surf.wavefront.com/api
+management.metrics.export.wavefront.uri=${WAVEFRONT_PROXY_URL}
 management.metrics.export.wavefront.step=10
 wavefront.application.name=todo-application-demo
 wavefront.application.service=todo-service
