--- a/manifest-docker.yml
+++ b/manifest-docker.yml
@@ -6,6 +6,7 @@ applications:
     - mariadb
     routes:
     - route: todo.apps.tas.tanzuworld.com/api
-    # path: target/app.jar
+    docker:
+      image: harbor.apps.cf.tanzutime.com/demo/todo-service:latest
     env:
       WAVEFRONT_PROXY_URL: proxy://wavefront-proxy.spring-pet-clinic.svc.cluster.local:2878
