--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,7 @@ spring.jpa.generate-ddl=true
 spring.cloud.stream.bindings.output.destination=completedtasks
 management.endpoints.web.exposure.include=*
 
-spring.datasource.url: ${vcap.services.mariadb.credentials.jdbcUrl}
-#&queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName=tac_db
+spring.datasource.url: ${vcap.services.mariadb.credentials.jdbcUrl}&queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName=tac_db
 
 spring.datasource.username: ${vcap.services.mariadb.credentials.username}
 spring.datasource.password: ${vcap.services.mariadb.credentials.password}
