--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.sleuth.sampler.probability: 1.0
 
 management.metrics.export.wavefront.uri=${WAVEFRONT_PROXY_URL}
 management.metrics.export.wavefront.step=10
-wavefront.application.name=todo-application-demo
+wavefront.application.name=todo-application
 wavefront.application.service=todo-service
 wavefront.freemium-account=false
 
