--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,6 +1,5 @@
 server.servlet.context-path=/api
 spring.jpa.generate-ddl=true
-spring.cloud.stream.bindings.output.destination=completedtasks
 management.endpoints.web.exposure.include=*
 server.port=8080
 
@@ -16,7 +15,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 #spring.sleuth.sampler.probability: 1.0
 
-management.metrics.export.wavefront.uri=proxy://localhost:2878
-wavefront.application.name=todo-application-demo
+management.metrics.export.wavefront.uri=https://surf.wavefront.com
+management.metrics.export.wavefront.api-token=8b20e0d9-43fd-4d63-abed-035313bcd179
+wavefront.application.name=todo-application-local
 wavefront.application.service=todo-service
 wavefront.freemium-account=false
