--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,12 @@
 server.servlet.context-path=/api
 spring.jpa.generate-ddl=true
-spring.cloud.stream.bindings.output.destination=completedtasks
 management.endpoints.web.exposure.include=*
+management.metrics.export.wavefront.enabled=true
 
 spring.datasource.url: ${vcap.services.mariadb.credentials.jdbcUrl}&queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName=tac_db
 
 spring.datasource.username: ${vcap.services.mariadb.credentials.username}
 spring.datasource.password: ${vcap.services.mariadb.credentials.password}
-spring.datasource.testOnBorrow: true
-spring.datasource.max-active=10
-spring.datasource.max-idle=8
-spring.datasource.min-idle=8
-spring.datasource.initial-size=5
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.format_sql=true
 
@@ -19,13 +14,13 @@ spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=none
 
-spring.sleuth.sampler.probability: 1.0
+#spring.sleuth.sampler.probability: 1.0
 
-management.metrics.export.wavefront.uri=${WAVEFRONT_PROXY_URL}
-management.metrics.export.wavefront.step=10
+#management.metrics.export.wavefront.uri=${WAVEFRONT_PROXY_URL}
 wavefront.application.name=todo-application
 wavefront.application.service=todo-service
-wavefront.freemium-account=false
+wavefront.freemium-account=true
+
 
 # logging.level.com.zaxxer.hikari: DEBUG
 # logging.level.brave.mysql8: DEBUG
