--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -7,7 +7,6 @@ spring.datasource.url: jdbc:mysql://localhost:3306/my_database?user=root&passwor
 
 spring.datasource.username: root
 spring.datasource.password: unix11
-spring.datasource.testOnBorrow: true
 
 spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
 spring.jpa.show-sql=false
@@ -15,8 +14,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 #spring.sleuth.sampler.probability: 1.0
 
-management.metrics.export.wavefront.uri=https://surf.wavefront.com
-management.metrics.export.wavefront.api-token=8b20e0d9-43fd-4d63-abed-035313bcd179
+management.metrics.export.wavefront.uri=proxy://localhost:2878
 wavefront.application.name=todo-application-local
 wavefront.application.service=todo-service
 wavefront.freemium-account=false
