--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.hibernate.ddl-auto=none
 
 #spring.sleuth.sampler.probability: 1.0
 
-#management.metrics.export.wavefront.uri=${WAVEFRONT_PROXY_URL}
+management.metrics.export.wavefront.uri=${WAVEFRONT_PROXY_URL}
 wavefront.application.name=todo-application
 wavefront.application.service=todo-service
 wavefront.freemium-account=true
