new application name

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -12,9 +12,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
-#spring.sleuth.sampler.probability: 1.0
-
 management.metrics.export.wavefront.uri=proxy://localhost:2878
-wavefront.application.name=todo-application-local
+wavefront.application.name=todo-application
 wavefront.application.service=todo-service
 wavefront.freemium-account=false
