--- a/manifest-tas4k8s.yml
+++ b/manifest-tas4k8s.yml
@@ -5,8 +5,6 @@ applications:
     services:
     - mariadb
     routes:
-    - route: todo.apps.tas.tanzuworld.com/api
+    - route: todo.apps.tas.tanzutime.com/api
     docker:
       image: harbor.apps.cf.tanzutime.com/demo/todo-service:latest
-    env:
-      WAVEFRONT_PROXY_URL: http://wavefront-proxy.default.svc.cluster.local:2878
