--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,14 @@ spring.jpa.generate-ddl=true
 management.endpoints.web.exposure.include=*
 management.metrics.export.wavefront.enabled=true
 
-spring.datasource.url: ${vcap.services.mariadb.credentials.jdbcUrl}&queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName=tac_db
+spring.datasource.url: ${vcap.services.mysql.credentials.jdbcUrl}&queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName=tac_db
 
-spring.datasource.username: ${vcap.services.mariadb.credentials.username}
-spring.datasource.password: ${vcap.services.mariadb.credentials.password}
+spring.datasource.username: ${vcap.services.mysql.credentials.username}
+spring.datasource.password: ${vcap.services.mysql.credentials.password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=none
 
@@ -19,7 +19,7 @@ spring.jpa.hibernate.ddl-auto=none
 management.metrics.export.wavefront.uri=${WAVEFRONT_PROXY_URL}
 wavefront.application.name=todo-application
 wavefront.application.service=todo-service
-wavefront.freemium-account=true
+wavefront.freemium-account=false
 
 
 # logging.level.com.zaxxer.hikari: DEBUG
