--- a/manifest.yml
+++ b/manifest.yml
@@ -3,9 +3,8 @@ applications:
   - name: todo-service
     memory: 1G
     services:
-    - mariadb
+    - mysql
     routes:
-    - route: todo.apps.tas.tanzuworld.com/api
-    # env:
-      # MANAGEMENT_METRICS_EXPORT_WAVEFRONT_URI: https://surf.wavefront.com/api
-      # MANAGEMENT_METRICS_EXPORT_WAVEFRONT_APITOKEN: (( wavefront-token ))
+    - route: todo.apps.tas.tanzutime.com/api
+    docker:
+      image: harbor.apps.cf.tanzutime.com/demo/todo-service:latest
