--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -33,6 +33,6 @@ jobs:
     trigger: true
   - put: cf-push-resource
     params:
-      manifest: source-code/manifest-tas4k8s.yml
+      manifest: source-code/manifest.yml
       environment_variables:
         WAVEFRONT_PROXY_URL: ((wavefront-url))
