--- a/src/main/resources/application-cloud.properties
+++ b/src/main/resources/application-cloud.properties
@@ -3,7 +3,7 @@ spring.datasource.username: ${vcap.services.mysql.credentials.username}
 spring.datasource.password: ${vcap.services.mysql.credentials.password}
 
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 wavefront.application.name=tanzu-live-demo
