--- a/src/main/resources/application-cloud.properties
+++ b/src/main/resources/application-cloud.properties
@@ -3,8 +3,8 @@ spring.datasource.username: ${vcap.services.mysql.credentials.username}
 spring.datasource.password: ${vcap.services.mysql.credentials.password}
 
 
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
 wavefront.application.name=tanzu-live-demo
 wavefront.application.service=todo-service
