removed cloud.propereties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,10 +17,9 @@ spring.jpa.hibernate.ddl-auto=create-drop
 #spring.sleuth.sampler.probability: 1.0
 
 management.metrics.export.wavefront.uri=${WAVEFRONT_PROXY_URL}
-wavefront.application.name=todo-application
+wavefront.application.name=tanzu-live-demo
 wavefront.application.service=todo-service
 wavefront.freemium-account=false
-
 
 # logging.level.com.zaxxer.hikari: DEBUG
 # logging.level.brave.mysql8: DEBUG
