--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 	<properties>
 		<java.version>11</java.version>
 		<spring-cloud.version>Hoxton.SR7</spring-cloud.version>
-		<wavefront.version>2.0.0-SNAPSHOT</wavefront.version>
+		<wavefront.version>2.0.0</wavefront.version>
 	</properties>
 
 	<dependencyManagement>
@@ -89,6 +89,7 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-sleuth</artifactId>
+			<version>2.2.2.RELEASE</version>
 		</dependency>
 	</dependencies>
 
