--- a/pom.xml
+++ b/pom.xml
@@ -86,12 +86,19 @@
 			<groupId>io.zipkin.brave</groupId>
 			<artifactId>brave-instrumentation-mysql8</artifactId>
 		</dependency>
-		<dependency>
+<!-- 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-sleuth</artifactId>
 			<version>2.2.2.RELEASE</version>
 		</dependency>
-	</dependencies>
+ -->	
+		<dependency>
+		  <groupId>io.opentracing.contrib</groupId>
+		  <artifactId>opentracing-spring-cloud-starter</artifactId>
+		  <version>0.5.3</version>
+		</dependency>
+
+    </dependencies>
 
 	<build>
 		<finalName>app</finalName>
