--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,9 @@ wavefront.application.name=tanzu-live-demo
 wavefront.application.service=todo-service
 wavefront.freemium-account=false
 
+
+spring.sleuth.trace-id128=true
+
 # logging.level.com.zaxxer.hikari: DEBUG
 # logging.level.brave.mysql8: DEBUG
 # logging.level.org.hibernate.type.descriptor.sql.BasicBinder: TRACE
