--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,10 +16,11 @@ spring.jpa.hibernate.ddl-auto=update
 
 #spring.sleuth.sampler.probability: 1.0
 
-management.metrics.export.wavefront.uri=${WAVEFRONT_PROXY_URL}
+# management.metrics.export.wavefront.uri=${WAVEFRONT_PROXY_URL:http://localhost}
+management.metrics.export.wavefront.enabled=false
 wavefront.application.name=tanzu-live-demo
 wavefront.application.service=todo-service
-wavefront.freemium-account=false
+wavefront.freemium-account=true
 
 
 spring.sleuth.trace-id128=true
