--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -6,7 +6,7 @@ server.port=8080
 spring.datasource.url: jdbc:mysql://localhost:3306/my_database?user=root&password=unix11&useSSL=false&queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName=tac_db
 
 spring.datasource.username: root
-spring.datasource.password: unix11
+spring.datasource.password: root
 
 spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
 spring.jpa.show-sql=false
