--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -3,7 +3,7 @@ kind: Workload
 metadata:
   name: todo-service
   labels:
-    apps.tanzu.vmware.com/workload-type: web
+    apps.tanzu.vmware.com/workload-type: web-test
 spec:
   serviceClaims:
   - name: mysql
@@ -18,4 +18,4 @@ spec:
     git:
       url: https://github.com/odedia/todo-service
       ref:
-        branch: master
+        branch: tap
