--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.servlet.context-path=/api
 spring.jpa.generate-ddl=true
 management.endpoints.web.exposure.include=*
 
-spring.datasource.url: jdbc:mysql://localhost:3306/database
+# spring.datasource.url: jdbc:mysql://localhost:3306/database
 #${vcap.services.mysql.credentials.jdbcUrl}&queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName=tac_db
 
 spring.datasource.username: root
