--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -3,15 +3,15 @@ spring.jpa.generate-ddl=true
 management.endpoints.web.exposure.include=*
 server.port=8080
 
-spring.datasource.url: jdbc:mysql://localhost:3306/my_database?user=root&password=password
+# spring.datasource.url: jdbc:mysql://localhost:3306/my_database?user=root&password=password
 #&useSSL=false&queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName=tac_db
 
-spring.datasource.username: root
-spring.datasource.password: password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
