--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.servlet.context-path=/api
 spring.jpa.generate-ddl=true
 management.endpoints.web.exposure.include=*
 
+
 # spring.datasource.url: jdbc:mysql://mysql:3306/database
 #${vcap.services.mysql.credentials.jdbcUrl}&queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName=tac_db
 
@@ -30,3 +31,13 @@ spring.sleuth.trace-id128=true
 # logging.level.org.hibernate.type.descriptor.sql.BasicBinder: TRACE
 # logging.level.org.springframework.jdbc.core.JdbcTemplate: DEBUG
 # logging.level.org.springframework.jdbc.core.StatementCreatorUtils: TRACE
+
+
+#---
+spring.config.activate.on-profile=local
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
