--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -1,24 +1,24 @@
 apiVersion: carto.run/v1alpha1
 kind: Workload
 metadata:
-  name: todo-service
+  name: todo-service-local
   labels:
     apps.tanzu.vmware.com/workload-type: web
 spec:
-  # serviceClaims:
-  # - name: mysql
-  #   ref:
-  #     apiVersion: with.sql.tanzu.vmware.com/v1
-  #     kind: MySQL
-  #     name: mysql
-  env:
-    - name: SPRING_PROFILES_ACTIVE
-      value: local
-  params:
-    - name: run-image
-      value: harbor.apps.cf.tanzutime.com/apps/todo-service
-    - name: tekton-pipeline-name
-      value: developer-defined-tekton-pipeline
+  serviceClaims:
+  - name: rmq
+    ref:
+      apiVersion: rabbitmq.com/v1beta1
+      kind: RabbitmqCluster
+      name: rmq-1
+  # env:
+  #   - name: SPRING_PROFILES_ACTIVE
+  #     value: default
+  # params:
+    # - name: run-image
+    #   value: harbor.apps.cf.tanzutime.com/apps/todo-service-local
+    # - name: tekton-pipeline-name
+    #   value: developer-defined-tekton-pipeline
   source:
     git:
       url: https://github.com/odedia/todo-service
