--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,43 +1,28 @@
 server.servlet.context-path=/api
 spring.jpa.generate-ddl=true
 management.endpoints.web.exposure.include=*
+org.springframework.cloud.bindings.boot.enable=true
+spring.cloud.stream.bindings.output.destination=completedtasks
 
 
-# spring.datasource.url: jdbc:mysql://mysql:3306/database
-#${vcap.services.mysql.credentials.jdbcUrl}&queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName=tac_db
-
-spring.datasource.username: root
-# spring.datasource.password: password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.format_sql=true
-
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-
-#spring.sleuth.sampler.probability: 1.0
-
-# management.metrics.export.wavefront.uri=${WAVEFRONT_PROXY_URL:http://localhost}
-management.metrics.export.wavefront.enabled=false
-wavefront.application.name=tanzu-live-demo
-wavefront.application.service=todo-service
-wavefront.freemium-account=true
-
-
-spring.sleuth.trace-id128=true
-
-# logging.level.com.zaxxer.hikari: DEBUG
-# logging.level.brave.mysql8: DEBUG
-# logging.level.org.hibernate.type.descriptor.sql.BasicBinder: TRACE
-# logging.level.org.springframework.jdbc.core.JdbcTemplate: DEBUG
-# logging.level.org.springframework.jdbc.core.StatementCreatorUtils: TRACE
-
-
-#---
-spring.config.activate.on-profile=local
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# spring.datasource.url: jdbc:mysql://mysql-members.default.svc.cluster.local:3306/todos
+# spring.datasource.username: todos
+# spring.datasource.password: todos
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.format_sql=true
+# spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+
+management.metrics.export.wavefront.enabled=false
+wavefront.application.name=tanzu-live-demo
+wavefront.application.service=todo-service
+wavefront.freemium-account=true
 
