--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -1,7 +1,7 @@
 apiVersion: carto.run/v1alpha1
 kind: Workload
 metadata:
-  name: todo-service-local
+  name: todo-service
   labels:
     apps.tanzu.vmware.com/workload-type: web
 spec:
@@ -11,12 +11,17 @@ spec:
       apiVersion: rabbitmq.com/v1beta1
       kind: RabbitmqCluster
       name: rmq-1
+  - name: mysql
+    ref:
+      apiVersion: with.sql.tanzu.vmware.com/v1
+      kind: MySQL
+      name: mysql
   # env:
   #   - name: SPRING_PROFILES_ACTIVE
   #     value: default
   # params:
     # - name: run-image
-    #   value: harbor.apps.cf.tanzutime.com/apps/todo-service-local
+    #   value: harbor.apps.cf.tanzutime.com/apps/todo-service
     # - name: tekton-pipeline-name
     #   value: developer-defined-tekton-pipeline
   source:
