--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,12 +11,12 @@ spring.cloud.stream.bindings.output.destination=completedtasks
 # spring.datasource.password=password
 # spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# spring.datasource.url: jdbc:mysql://mysql-members.default.svc.cluster.local:3306/todos
-# spring.datasource.username: todos
-# spring.datasource.password: todos
+spring.datasource.url: jdbc:mysql://mysql-members.default.svc.cluster.local:3306/todos
+spring.datasource.username: todos
+spring.datasource.password: todos
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
