--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.cloud.stream.bindings.output.destination=completedtasks
 # spring.datasource.password=password
 # spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.datasource.url: jdbc:mysql://mysql-members.default.svc.cluster.local:3306/todos
+spring.datasource.url: jdbc:mysql://mysql-members:3306/todos
 spring.datasource.username: todos
 spring.datasource.password: todos
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -20,9 +20,4 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-
-management.metrics.export.wavefront.enabled=false
-wavefront.application.name=tanzu-live-demo
-wavefront.application.service=todo-service
-wavefront.freemium-account=true
 
