--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,14 @@ spring.jpa.generate-ddl=true
 management.endpoints.web.exposure.include=*
 management.metrics.export.wavefront.enabled=true
 
-spring.datasource.url: ${vcap.services.mysql.credentials.jdbcUrl}&queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName=tac_db
+#spring.datasource.url: ${vcap.services.mysql.credentials.jdbcUrl}&queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName=tac_db
 
-spring.datasource.username: ${vcap.services.mysql.credentials.username}
-spring.datasource.password: ${vcap.services.mysql.credentials.password}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.username: ${vcap.services.mysql.credentials.username}
+#spring.datasource.password: ${vcap.services.mysql.credentials.password}
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
