--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 server.servlet.context-path=/api
 spring.jpa.generate-ddl=true
 management.endpoints.web.exposure.include=*
-management.metrics.export.wavefront.enabled=true
 
 #spring.datasource.url: ${vcap.services.mysql.credentials.jdbcUrl}&queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName=tac_db
 
@@ -10,15 +9,15 @@ management.metrics.export.wavefront.enabled=true
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.format_sql=true
 
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.show-sql=false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 #spring.sleuth.sampler.probability: 1.0
 
 # management.metrics.export.wavefront.uri=${WAVEFRONT_PROXY_URL:http://localhost}
 management.metrics.export.wavefront.enabled=false
-wavefront.application.name=tanzu-live-demo
+wavefront.application.name=todos-app
 wavefront.application.service=todo-service
 wavefront.freemium-account=true
 
