--- a/catalog/catalog-info.yaml
+++ b/catalog/catalog-info.yaml
@@ -10,7 +10,7 @@ metadata:
     - web
     - tanzu
   annotations:
-    'backstage.io/kubernetes-label-selector': 'app.kubernetes.io/part-of=todo-app'
+    'backstage.io/kubernetes-label-selector': 'app.kubernetes.io/part-of=todos-app'
 spec:
   type: service
   lifecycle: experimental
