--- a/catalog/catalog-info.yaml
+++ b/catalog/catalog-info.yaml
@@ -15,6 +15,7 @@ spec:
   type: service
   lifecycle: experimental
   owner: default-team
+  system: todos
   providesApis: # list of APIs provided by the Component
     - todo-api
 
