--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,31 +1,12 @@
-server.servlet.context-path=/api
+server.servlet.context-path=/
 spring.jpa.generate-ddl=true
 management.endpoints.web.exposure.include=*
 
-#spring.datasource.url: ${vcap.services.mysql.credentials.jdbcUrl}&queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor&zipkinServiceName=tac_db
-
-#spring.datasource.username: ${vcap.services.mysql.credentials.username}
-#spring.datasource.password: ${vcap.services.mysql.credentials.password}
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-#spring.sleuth.sampler.probability: 1.0
+management.metrics.export.wavefront.enabled=true
 
-# management.metrics.export.wavefront.uri=${WAVEFRONT_PROXY_URL:http://localhost}
-management.metrics.export.wavefront.enabled=false
-wavefront.application.name=todos-app
-wavefront.application.service=todo-service
-wavefront.freemium-account=true
-
-
-spring.sleuth.trace-id128=true
-
-# logging.level.com.zaxxer.hikari: DEBUG
-# logging.level.brave.mysql8: DEBUG
-# logging.level.org.hibernate.type.descriptor.sql.BasicBinder: TRACE
-# logging.level.org.springframework.jdbc.core.JdbcTemplate: DEBUG
-# logging.level.org.springframework.jdbc.core.StatementCreatorUtils: TRACE
