--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -4,6 +4,7 @@ metadata:
   name: todo-service
   labels:
     apps.tanzu.vmware.com/workload-type: web
+    apps.tanzu.vmware.com/has-tests: "true"
     app.kubernetes.io/part-of: todos-app
 spec:
   params:
@@ -15,9 +16,9 @@ spec:
       url: https://github.com/odedia/todo-service
       ref:
         branch: master
-  serviceClaims:
-  - name: todos-db
-    ref:
-      apiVersion: services.apps.tanzu.vmware.com/v1alpha1
-      kind: ResourceClaim
-      name: todos-db
+  # serviceClaims:
+  # - name: todos-db
+  #   ref:
+  #     apiVersion: services.apps.tanzu.vmware.com/v1alpha1
+  #     kind: ResourceClaim
+  #     name: todos-db
