--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -16,9 +16,9 @@ spec:
       url: https://github.com/odedia/todo-service
       ref:
         branch: main
-  # serviceClaims:
-  # - name: todos-db
-  #   ref:
-  #     apiVersion: services.apps.tanzu.vmware.com/v1alpha1
-  #     kind: ResourceClaim
-  #     name: todos-db
+  serviceClaims:
+  - name: todos-db
+    ref:
+      apiVersion: services.apps.tanzu.vmware.com/v1alpha1
+      kind: ResourceClaim
+      name: todos-db
