--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,16 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Tanzu: Debug Remote Config",
+            "request": "attach",
+            "port": 9005,
+            "hostName": "localhost",
+            "preLaunchTask": "tanzuWorkload: Deploy And Connect todo-service",
+            "preRestartTask": "tanzuWorkload: Deploy And Connect todo-service",
+            "postDebugTask": "tanzuManagement: Kill Port Forward todo-service"
+        },
+        {
+            "type": "java",
             "name": "Launch SpringBootTodoApplication",
             "request": "launch",
             "mainClass": "com.odedia.SpringBootTodoApplication",
