--- a/db/clusterinstanceclass.yaml
+++ b/db/clusterinstanceclass.yaml
@@ -1,11 +1,11 @@
+---
 apiVersion: services.apps.tanzu.vmware.com/v1alpha1
-kind: ResourceClaimPolicy
+kind: ClusterInstanceClass
 metadata:
   name: todos-db
-  namespace: service-instances
 spec:
-  consumingNamespaces:
-  - '*'
-  subject:
+  description:
+    short: PostgreSQL Database
+  pool:
     group: sql.tanzu.vmware.com
     kind: Postgres
