--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,7 @@ management.endpoints.web.exposure.include=*
 
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
+# spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 management.metrics.export.wavefront.enabled=true
